Fixed error in 07-flex-layout-2, cards don't wrap.

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -46,9 +46,9 @@ body {
   display: flex;
   flex-wrap: wrap;
   padding: 48px;
-  flex-direction: column;
-  gap: 32px;
+  flex-direction: row;
 }
+
 
 .content {
   display: flex;
